_sass/_posts.scss
@mixin text-decoration {
  text-decoration-color: oklch(from currentColor l c h / 65%);
  text-decoration-thickness: 0.2rem;
}

.post-link {
  color: inherit;
  text-decoration: none;

  .post-header__title {
    -webkit-text-decoration: underline solid rgba(11, 12, 12, 0);
    text-decoration: underline solid rgba(11, 12, 12, 0);
    transition: text-decoration-color var(--transition-duration);
    transition: text-decoration-color var(--transition-duration),
      -webkit-text-decoration-color var(--transition-duration);

    @media (max-width: $large-breakpoint) {
      @include text-decoration;
    }
  }

  &:focus,
  &:hover {
    .post-header__title {
      @include text-decoration;
    }
  }
}

.page-header,
.post-header {
  --flow-space: 1.25rem;
  margin-bottom: 0;
  padding-bottom: 0;
  padding-top: 0;

  &__title {
    font-size: 2rem;
    margin-bottom: var(--flow-space);
    margin-top: 0;
  }

  &__title--sm {
    font-size: var(--font-size-large);
  }

  &__meta {
    column-gap: var(--flow-space);
    display: flex;
    flex-wrap: wrap;
    row-gap: 0.5rem;

    .data {
      --h: 1.15;
      --icon: calc(var(--font-size-small) * var(--h));
      color: var(--color-shades-primary-glare);
      display: flex;
      font-size: calc(var(--font-size-small) * var(--h));

      @media (max-width: $large-breakpoint) {
        font-size: var(--font-size-x-small);
      }

      &::before {
        align-self: center;
        background-size: var(--icon);
        content: "";
        height: var(--icon);
        margin-right: calc(var(--flow-space) * 0.35);
        width: var(--icon);

        @media (max-width: $large-breakpoint) {
          background-size: 15px;
          height: 15px;
          width: 15px;
        }
      }

      &.comments {
        &::before {
          background-image: url("data:image/svg+xml,\
            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>\
              <path fill='%2368778d' d='M123.6 391.3c12.9-9.4 29.6-11.8 44.6-6.4c26.5 9.6 56.2 15.1 87.8 15.1c124.7 0 208-80.5 208-160s-83.3-160-208-160S48 160.5 48 240c0 32 12.4 62.8 35.7 89.2c8.6 9.7 12.8 22.5 11.8 35.5c-1.4 18.1-5.7 34.7-11.3 49.4c17-7.9 31.1-16.7 39.4-22.7zM21.2 431.9c1.8-2.7 3.5-5.4 5.1-8.1c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208s-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6c-15.1 6.6-32.3 12.6-50.1 16.1c-.8 .2-1.6 .3-2.4 .5c-4.4 .8-8.7 1.5-13.2 1.9c-.2 0-.5 .1-.7 .1c-5.1 .5-10.2 .8-15.3 .8c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4c4.1-4.2 7.8-8.7 11.3-13.5c1.7-2.3 3.3-4.6 4.8-6.9c.1-.2 .2-.3 .3-.5z'/>\
            </svg>");
        }
      }

      &.published {
        &::before {
          background-image: url("data:image/svg+xml,\
            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>\
              <path fill='%2368778d' d='M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z'/>\
            </svg>");
        }
      }

      &.reading-time {
        &::before {
          background-image: url("data:image/svg+xml,\
            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E>\
              <path fill='%2368778d' d='M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z'/>\
            </svg>");
        }
      }

      &.views {
        &::before {
          background-image: url("data:image/svg+xml,\
            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512' height='34' width='34'>\
              <path fill='%2368778d' d='M288 80c-65.2 0-118.8 29.6-159.9 67.7C89.6 183.5 63 226 49.4 256c13.6 30 40.2 72.5 78.6 108.3C169.2 402.4 222.8 432 288 432s118.8-29.6 159.9-67.7C486.4 328.5 513 286 526.6 256c-13.6-30-40.2-72.5-78.6-108.3C406.8 109.6 353.2 80 288 80zM95.4 112.6C142.5 68.8 207.2 32 288 32s145.5 36.8 192.6 80.6c46.8 43.5 78.1 95.4 93 131.1c3.3 7.9 3.3 16.7 0 24.6c-14.9 35.7-46.2 87.7-93 131.1C433.5 443.2 368.8 480 288 480s-145.5-36.8-192.6-80.6C48.6 356 17.3 304 2.5 268.3c-3.3-7.9-3.3-16.7 0-24.6C17.3 208 48.6 156 95.4 112.6zM288 336c44.2 0 80-35.8 80-80s-35.8-80-80-80c-.7 0-1.3 0-2 0c1.3 5.1 2 10.5 2 16c0 35.3-28.7 64-64 64c-5.5 0-10.9-.7-16-2c0 .7 0 1.3 0 2c0 44.2 35.8 80 80 80zm0-208a128 128 0 1 1 0 256 128 128 0 1 1 0-256z'/>\
            </svg>");
        }
      }
    }
  }
}

.post-footer {
  text-align: inherit;

  ul {
    margin-left: inherit;
  }
}

.page__image {
  display: flex;

  &--center {
    display: flex;
    justify-content: center;
  }

  &--lg {
    img {
      border: 1px solid var(--color-stroke);
      width: 100%;
    }
  }

  &--md {
    img {
      border: 1px solid var(--color-stroke);
      width: 65%;

      @media (max-width: $large-breakpoint) {
        width: 85%;
      }
    }
  }
}

.archive-date {
  color: var(--color-shades-primary-glare);
  display: flex;
  font-size: #{"clamp(var(--font-size-x-small), 0.964rem + 0.446vw, var(--font-size-small))"};
}

.embed {
  --flow-space: 1.5rem;
  margin: var(--flow-space) 0 2rem;
}

.tags {
  --flow-space: 1.25rem;

  .tags__title {
    margin-top: 0;
  }

  .tags__item {
    margin-bottom: var(--flow-space);
  }
}

.related {
  --flow-space: 1.25rem;
  border-top: 1px solid var(--color-primary-info-bg);
  margin-bottom: 2rem;

  .related__list {
    list-style: none;
    padding-left: 0;

    .related__item {
      margin-bottom: var(--flow-space);
    }
  }
}

.gutter-base {
  --gutter: 1rem;

  &.cluster {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    gap: var(--gutter, clamp(1.375rem, 1.65rem, 2rem));
    justify-content: flex-start;
    list-style: none;
    padding-left: 0;
  }

  &.shrink {
    padding-block: 0.5rem 0.25rem;
  }

  &.stretch {
    padding-top: var(--gutter);
  }
}

.pill {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  border: 1px solid var(--color-stroke);
  border-radius: 1rem;
  color: var(--color-shades-primary-text);
  font-size: 0.675rem;
  padding: 0.5rem 0.675rem;
  text-decoration: none;
  transition: all ease 0.2s;

  &:focus-visible,
  &:hover {
    background-color: var(--color-primary-info-text);
    border-color: var(--color-primary-info-text);
    color: var(--color-shades-tertiary-bright);
  }

  &:focus-visible {
    outline: inherit;
  }
}

